tests/csmith/bad/smith001698.c
/*
 * This is a RANDOMLY GENERATED PROGRAM.
 *
 * Generator: csmith 2.0.0
 * svn version: exported
 * Options:   --check-global -s 1698
 * Seed:      1698
 */

#include "random_runtime.h"


long __undefined;

/* --- Struct/Union Declarations --- */
/* --- GLOBAL VARIABLES --- */
 volatile int64_t g_4 = 0xE76F5020F89B5461LL;/* VOLATILE GLOBAL g_4 */
int16_t g_5 = 0xAB8CL;
int32_t g_7[5][1] = {{0x152C58FBL}, {0x152C58FBL}, {0x152C58FBL}, {0x152C58FBL}, {0x152C58FBL}};


/* --- FORWARD DECLARATIONS --- */
int32_t  func_1(void);


/* --- FUNCTIONS --- */
/* ------------------------------------------ */
/* 
 * reads : g_4 g_5
 * writes: g_7 g_4 g_5
 */
int32_t  func_1(void)
{ /* block id: 0 */
    int32_t *l_6 = &g_7[3][0];
    int i, j;
    (*l_6) = (safe_div_func_int8_t_s_s(g_4, g_5));
    for (g_4 = 3; g_4 >= 0; g_4 += -3)
    {
        for (g_5 = 0; g_5 < 1; g_5 += 1)
        { /* block id: 2 */
            uint16_t l_8 = 0x962EL;
            return l_8;
        }
    }
    return g_4;
}




/* ---------------------------------------- */
int main (int argc, char* argv[])
{
    int i, j;
    func_1();
    printf("checksum g_4 = %d\n", g_4);
    printf("checksum g_5 = %d\n", g_5);
    printf("checksum g_7[0][0] = %d\n", g_7[0][0]);
    printf("checksum g_7[1][0] = %d\n", g_7[1][0]);
    printf("checksum g_7[2][0] = %d\n", g_7[2][0]);
    printf("checksum g_7[3][0] = %d\n", g_7[3][0]);
    printf("checksum g_7[4][0] = %d\n", g_7[4][0]);
    printf("checksum g_7[3][0] = %d\n", g_7[3][0]);
}

/************************ statistics *************************
XXX max struct depth: 0
breakdown:
   depth: 0, occurrence: 5

XXX max expression depth: 0
breakdown:
   depth: 0, occurrence: 3

XXX total number of pointers: 1

XXX times a variable address is taken: 1
XXX times a pointer is dereferenced on RHS: 0
breakdown:
XXX times a pointer is dereferenced on LHS: 1
breakdown:
   depth: 1, occurrence: 1
XXX times a pointer is compared with null: 0
XXX times a pointer is compared with address of another variable: 0
XXX times a pointer is compared with another pointer: 0
XXX times a pointer is qualified to be dereferenced: 2

XXX max dereference level: 1
breakdown:
   level: 0, occurrence: 0
   level: 1, occurrence: 2
XXX number of pointers point to pointers: 0
XXX number of pointers point to scalars: 1
XXX number of pointers point to structs: 0
XXX percent of pointers has null in alias set: 0
XXX average alias set size: 1

XXX times a non-volatile is read: 2
XXX times a non-volatile is write: 2
XXX times a volatile is read: 2
XXX    times read thru a pointer: 0
XXX times a volatile is write: 0
XXX    times written thru a pointer: 0
XXX times a volatile is available for access: 3
XXX percentage of non-volatile access: 66.7

XXX forward jumps: 0
XXX backward jumps: 0

XXX stmts: 6

XXX percentage a fresh-made variable is used: 75
XXX percentage an existing variable is used: 25
********************* end of statistics **********************/

